--- a/WpfMobileMusicNotificationServer/MainWindow.xaml
+++ b/WpfMobileMusicNotificationServer/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:tb="http://www.hardcodet.net/taskbar"
         Loaded="Window_Loaded"
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
-        mc:Ignorable="d"
+        mc:Ignorable="d" 
         Visibility="{Binding Visibility, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay, Converter={StaticResource ResourceKey=BoolToVisibilityConverter}}"
         ShowInTaskbar="False" AllowsTransparency="True"
         WindowStyle="None"
@@ -18,7 +18,7 @@
         <local:MainWindowViewModel />
     </Window.DataContext>
     <Grid>
-        <TextBlock x:Name="txtInfo" Text="{Binding InfoText, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBlock x:Name="txtInfo" Text="{Binding InfoText, UpdateSourceTrigger=PropertyChanged}" FontSize="20" VerticalAlignment="Center" HorizontalAlignment="Center" />
         <tb:TaskbarIcon x:Name="TrayItem" IconSource=".\receive.ico">
             <tb:TaskbarIcon.ContextMenu>
                 <ContextMenu>
